<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Bandeau : RelativeLayout -->
    <RelativeLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:background="#795548">

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="☕"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogo"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAppName"
            android:layout_centerHorizontal="true"
            android:text="@string/app_subtitle"
            android:textColor="#EFEBE9"
            android:textSize="14sp" />
    </RelativeLayout>

    <!-- Formulaire : LinearLayout vertical -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_nom"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_table"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCommencer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#795548"
            android:text="@string/btn_commencer"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>
